tests/ui/variable_bits/invalid_attribute_format.stderr
error: invalid variable_bits attribute format, use #[variable_bits] or #[variable_bits(8, 16, 32)]
 --> tests/ui/variable_bits/invalid_attribute_format.rs:4:1
  |
4 | #[variable_bits = 42]  // Invalid: should be list format
  | ^^^^^^^^^^^^^^^^^^^^^
